--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 		<form action="#">
     		<div class="form-group">
       			<label for="comment">Comment:</label>
-      				<center><textarea class="form-control" rows="5" id="comment" name="text" style="width: 500px"></textarea></center>
+      				<center><textarea class="form-control" rows="5" id="comment" name="text" style="width: 100%"></textarea></center>
     		</div>
     		<button type="submit" class="btn btn-danger">Submit</button>
   		</form>
