--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     			<div class="carousel-item">
       				<img src="coding_2.jpg" alt="Coding" width="1100" height="500">
       					<div class="carousel-caption">
-        					<h1>Learn Code from World's Best Website</h1>
-        					<p><h3>Here, we are always here to help you. You can learn at your own pace. Keep Learning, keep smilling.</h3></p>
+        					<h1>Learn About Codes</h1>
+        					<p><h3>You can learn at your own pace. Keep Learning, keep smilling.😁</h3></p>
       					</div>   
     			</div>
 
@@ -225,7 +225,7 @@
 		<form action="#">
     		<div class="form-group">
       			<label for="comment">Comment:</label>
-      				<center><textarea class="form-control" rows="5" id="comment" name="text" style="width: 500px"></textarea></center>
+      				<center><textarea class="form-control" rows="5" id="comment" name="text" style="width: 100%;"></textarea></center>
     		</div>
     		<button type="submit" class="btn btn-danger">Submit</button>
   		</form>
