Fourth Commit [spelling_cmnts]

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 			<div class="col-sm-6">
 				<blockquote>
 					<img src="M-FEJMZ0.jpg" style="border-radius: 50%; width: 40px;">
-						Passionately curious beings are wwlcome in this website. You can check it's content. It's really nice.
+						Passionately curious beings are welcome in this website. You can check it's content. It's really nice.
 				</blockquote>
 			</div>
 		</div>
