--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     			<div class="carousel-item">
       				<img src="coding_2.jpg" alt="Coding" width="1100" height="500">
       					<div class="carousel-caption">
-        					<h1>Learn About Codes</h1>
-        					<p><h3>You can learn at your own pace. Keep Learning, keep smilling.😁</h3></p>
+        					<h1>Learn Code from World's Best Website</h1>
+        					<p><h3>Here, we are always here to help you. You can learn at your own pace. Keep Learning, keep smilling.</h3></p>
       					</div>   
     			</div>
 
@@ -216,7 +216,7 @@
 			<div class="col-sm-6">
 				<blockquote>
 					<img src="M-FEJMZ0.jpg" style="border-radius: 50%; width: 40px;">
-						Passionately curious beings are wwlcome in this website. You can check it's content. It's really nice.
+						Passionately curious beings are welcome in this website. You can check it's content. It's really nice.
 				</blockquote>
 			</div>
 		</div>
