--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 </head>
-<body style="font-family: google sans;">
+<body style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
 	<div class="container-fluid">
     	<div class="jumbotron" style="color: white;">
     		<h1 style="color: black;"><strong><span style="color: #4285F4">C</span><span style="color: #DB4437">o</span><span style="color: #F4B400">d</span><span style="color: #0F9D58">e</span> For Life</strong></h1>
@@ -208,18 +208,29 @@
 		<span style="color: #DB4437" class="text-center"><h1>Comments</h1><p>----------------------------</p></span>
 		<div class="row offset-1">
 			<div class="col-sm-6">
-				<p>
-					<img src="IMG_20190929_132514.jpg" style="border-radius: 50%; width: 40px;">
-						I love this website and I would further recomend this to all of my friends for basic knowledge.
-				</p>
+				<div class="container mt-3">
+					<div class="media border p-3">
+						<img src="IMG_20190929_132514.jpg" alt="SoumyadeepMondal" class="mr-3 mt-3 rounded-circle" style="width:60px;">
+						<div class="media-body">
+							<h4>Soumyadeep Mondal<small> <i>Posted on April 19, 2020</i></small></h4>
+							<p>I love this website and I would further recomend this to all of my friends for basic knowledge.</p>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="col-sm-6">
-				<blockquote>
-					<img src="M-FEJMZ0.jpg" style="border-radius: 50%; width: 40px;">
-						Passionately curious beings are welcome in this website. You can check it's content. It's really nice.
-				</blockquote>
+				<div class="container mt-3">
+					<div class="media border p-3">
+						<img src="M-FEJMZ0.jpg" alt="Sundar" class="mr-3 mt-3 rounded-circle" style="width:60px;">
+						<div class="media-body">
+							<h4>Sundar Pichai<small> <i>Posted on April 19, 2020</i></small></h4>
+							<p>Passionately curious beings are welcome in this website. You can check it's content. It's really nice.</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
+		<br>
 		<center>
 		<h4>Enter Your Comment Below</h4>
 		<form action="#">
@@ -229,7 +240,7 @@
       				<center><textarea class="form-control" rows="5" id="comment" name="text" style="width: 100%;"></textarea></center>
 
     		</div>
-    		<button type="submit" class="btn btn-danger">Submit</button>
+    		<button type="submit" class="btn btn-primary">Submit</button>
   		</form>
   	</center>
 	</div>
